<resources>
    <string name="app_name">Guardian</string>
    <string name="login">Log In</string>
    <string name="passwordHint">Password</string>
    <string name="emailHint">example@example.com</string>
    <string name="regQues">Don\'t have an account? Register </string>
    <string name="clickText">here</string>
    <string name="guardian">Guardian</string>
    <string name="username">Username</string>
    <string name="phone">Phone Number</string>
    <string name="register">Register</string>
    <string name="alert">Alert</string>
    <string name="map">Map</string>
    <string name="linkAcc">Linked Accounts</string>
    <string name="userAcc">User Account</string>
    <string name="logout">Log Out</string>
    <string name="police">Police</string>
    <string name="fire">Fire Department</string>
    <string name="hospital">Hospital</string>
    <string name="title_activity_maps">Map</string>
    <string name="back">Back</string>
    <string name="email">Email Address</string>
    <string name="add">+</string>

    <!-- dialog_register_user -->
    <string name="textView_dialogRegisterUser_userName">Username</string>
    <string name="hint_dialogRegisterUser_userName">username</string>
    <string name="textView_dialogRegisterUser_phone">Phone</string>
    <string name="hint_dialogRegisterUser_phone">6049999999</string>
    <string name="textView_dialogRegisterUser_email">Email</string>
    <string name="hint_dialogRegisterUser_email">myemail@emailaddress.com</string>
    <string name="textView_dialogRegisterUser_password">Password</string>

    <!-- activity_linked_account -->
    <string name="textView_linkedAccount_noLinkedUsers">You Have 0 Linked Users</string>
    <string name="textView_linkedAccount_linkedUserRequests">Link Requests</string>
    <string name="textView_linkedAccount_linkedUsers">Linked Users</string>
    <string name="textView_linkedAccount_username">Username</string>
    <string name="textView_linkedAccount_accept">Accept</string>
    <string name="textView_linkedAccount_delete">Delete</string>
    <string name="textView_linkedAccount_Status">Status</string>
    <string name="textView_linkedAccount_Alert">Alert</string>
    <string name="textView_linkedAccount_Mute">Mute</string>
    <string name="textView_linkedAccount_Delete">Delete</string>

    <!-- dialog_add_linked_user -->
    <string name="textView_dialogAddLinkedUser_title">Link to Another User</string>
    <string name="textView_dialogAddLinkedUser_email">Email</string>
    <string name="editText_dialogAddLinkedUser_email">linkeduser@email.com</string>
    <string name="button_dialogAddLinkedUser_cancel">Cancel</string>
    <string name="button_dialogAddLinkedUser_sendRequest">Send Request</string>

    <!-- dialog_alert -->
    <string name="button_dialogAlert_ok">Ok</string>

    <!-- notification -->
    <string name="notification_title">Guardian</string>

</resources>
