<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/textView_dialogRegisterUser_userName"
                style="@style/RegisterHeadings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_dialogRegisterUser_userName" />

            <EditText
                android:id="@+id/editText_dialogRegisterUser_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_dialogRegisterUser_userName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/textView_dialogRegisterUser_phone"
                style="@style/RegisterHeadings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_dialogRegisterUser_phone" />

            <EditText
                android:id="@+id/editText_dialogRegisterUser_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_dialogRegisterUser_phone"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/textView_dialogRegisterUser_email"
                style="@style/RegisterHeadings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_dialogRegisterUser_email" />

            <EditText
                android:id="@+id/editText_dialogRegisterUser_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_dialogRegisterUser_email"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_dialogRegisterUser_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_dialogRegisterUser_password"
                style="@style/RegisterHeadings"/>

            <EditText
                android:id="@+id/editText_dialogRegisterUser_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/button_dialogRegisterUser_register"
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/blue_btn"
            android:text="@string/register" />
    </LinearLayout>

</RelativeLayout>