<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:text="@string/textView_dialogAddLinkedUser_title"
            android:textColor="@color/teal"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView_dialogAddLinkedUser_email"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_dialogAddLinkedUser_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editText_dialogAddLinkedUser_email"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="27dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <Button
            android:id="@+id/button_dialogAddLinkedUser_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="50"
            android:background="@color/colorPrimaryDark"
            android:text="@string/button_dialogAddLinkedUser_cancel"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_dialogAddLinkedUser_sendRequest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="50"
            android:background="@color/teal"
            android:text="@string/button_dialogAddLinkedUser_sendRequest"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>