<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.bcit.comp3717.guardian.controller.LandingActivity">

    <ImageView
        android:id="@+id/newWestLogo"
        android:layout_width="152dp"
        android:layout_height="64dp"
        app:srcCompat="@drawable/newwestlogo"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp" />

    <ImageView
        android:id="@+id/guardianLogo"
        android:layout_width="101dp"
        android:layout_height="83dp"
        app:srcCompat="@drawable/guardianlogo"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/newWestLogo"/>

    <TextView
        android:id="@+id/guardianBtn"
        android:layout_width="153dp"
        android:layout_height="46dp"
        android:text="@string/guardian"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_alignBottom="@+id/guardianLogo"
        android:layout_toEndOf="@+id/guardianLogo"
        android:layout_marginBottom="15dp" />

    <EditText
        android:id="@+id/editText_landingActivity_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="72dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/guardianLogo" />

    <EditText
        android:id="@+id/editText_landingActivity_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="72dp"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:layout_below="@+id/editText_landingActivity_email"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="13dp" />

    <Button
        android:id="@+id/button_landingActivity_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button_landingActivity_here"
        android:layout_below="@+id/editText_landingActivity_password"
        android:layout_marginEnd="58dp"
        android:layout_marginTop="40dp"
        android:onClick="loginRequest"
        android:text="@string/login" />

    <Button
        android:id="@+id/button_landingActivity_here"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:inputType="none"
        android:onClick="register"
        android:text="@string/clickText"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toEndOf="@+id/newWestLogo"
        android:layout_marginStart="47dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regQues"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="55dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/newWestLogo" />
</RelativeLayout>
