<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.bcit.comp3717.guardian.controller.UserAccountActivity"
    android:orientation="vertical"
    android:background="@color/background">

    <Button
        android:id="@+id/backBtn"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:background="@drawable/blue_btn"
        android:onClick="back"
        android:text="@string/back" />

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0099ff"
        android:gravity="center_horizontal|center_vertical"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/username"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:inputType="textPersonName"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="Edward Snowden"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#0099ff"
        android:gravity="center_horizontal|center_vertical"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/email"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:inputType="textEmailAddress"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="esnowden@nsa.gov"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/phoneText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#0099ff"
        android:gravity="center_horizontal|center_vertical"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/phone"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/phoneInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:inputType="phone"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="888-123-4567"
        android:textSize="30sp" />
</LinearLayout>
